# swagger_output.json
@@ -2,17 +2,20 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "E-commerce API",
+    "title": "REST API",
     "description": ""
   },
-  "host": "one3430-2.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/produtos/": {
       "post": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -44,6 +47,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -57,6 +63,9 @@
     },
     "/produtos/{codigo}": {
       "get": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -79,6 +88,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -113,6 +125,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -134,6 +149,9 @@
     },
     "/session/login": {
       "post": {
+        "tags": [
+          "session"
+        ],
         "description": "",
         "parameters": [
           {
@@ -161,6 +179,9 @@
     },
     "/session/info": {
       "get": {
+        "tags": [
+          "session"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -174,6 +195,9 @@
     },
     "/session/car": {
       "post": {
+        "tags": [
+          "session"
+        ],
         "description": "",
         "parameters": [
           {
